Update 0702 update combine-csv

--- a/0702/Land-competition.ipynb
+++ b/0702/Land-competition.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -147,27 +147,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>district</th>\n",
-       "      <th>sign</th>\n",
-       "      <th>address</th>\n",
-       "      <th>square</th>\n",
-       "      <th>zone</th>\n",
-       "      <th>n1</th>\n",
-       "      <th>n2</th>\n",
-       "      <th>date</th>\n",
-       "      <th>stuff</th>\n",
-       "      <th>level</th>\n",
+       "      <th>鄉鎮市區</th>\n",
+       "      <th>交易標的</th>\n",
+       "      <th>土地區段位置/建物區段門牌</th>\n",
+       "      <th>土地移轉總面積平方公尺</th>\n",
+       "      <th>都市土地使用分區</th>\n",
+       "      <th>非都市土地使用分區</th>\n",
+       "      <th>非都市土地使用編定</th>\n",
+       "      <th>交易年月日</th>\n",
+       "      <th>交易筆棟數</th>\n",
+       "      <th>移轉層次</th>\n",
        "      <th>...</th>\n",
-       "      <th>health</th>\n",
-       "      <th>compartmented</th>\n",
-       "      <th>manage</th>\n",
-       "      <th>price</th>\n",
-       "      <th>square price</th>\n",
-       "      <th>park</th>\n",
-       "      <th>park_size</th>\n",
-       "      <th>park_price</th>\n",
-       "      <th>note</th>\n",
-       "      <th>sId</th>\n",
+       "      <th>建物現況格局-衛</th>\n",
+       "      <th>建物現況格局-隔間</th>\n",
+       "      <th>有無管理組織</th>\n",
+       "      <th>總價元</th>\n",
+       "      <th>單價元/平方公尺</th>\n",
+       "      <th>車位類別</th>\n",
+       "      <th>車位移轉總面積平方公尺</th>\n",
+       "      <th>車位總價元</th>\n",
+       "      <th>備註</th>\n",
+       "      <th>編號</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -178,13 +178,13 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [district, sign, address, square, zone, n1, n2, date, stuff, level, floor, state, use, material, complete, area, room, hall, health, compartmented, manage, price, square price, park, park_size, park_price, note, sId]\n",
+       "Columns: [鄉鎮市區, 交易標的, 土地區段位置/建物區段門牌, 土地移轉總面積平方公尺, 都市土地使用分區, 非都市土地使用分區, 非都市土地使用編定, 交易年月日, 交易筆棟數, 移轉層次, 總樓層數, 建物型態, 主要用途, 主要建材, 建築完成年月, 建物移轉總面積平方公尺, 建物現況格局-房, 建物現況格局-廳, 建物現況格局-衛, 建物現況格局-隔間, 有無管理組織, 總價元, 單價元/平方公尺, 車位類別, 車位移轉總面積平方公尺, 車位總價元, 備註, 編號]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 28 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
    "source": [
     "col_name = ['district', 'sign', 'address', 'square', 'zone', 'n1', 'n2' , 'date', 'stuff' , 'level', 'floor', 'state', 'use', 'material', 'complete', 'area', 'room', 'hall', 'health', 'compartmented', 'manage', 'price', 'square price', 'park', 'park_size', 'park_price', 'note', 'sId']\n",
     "\n",
-    "landDF = pd.DataFrame(columns=col_name)\n",
+    "landDF = pd.DataFrame(columns=S1_106.columns)\n",
     "# 自訂顯示幾個feature\n",
     "# pd.set_option('display.max_columns', 30)\n",
     "landDF"
@@ -200,15 +200,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12859, 28)\n",
+      "(10442, 28)\n",
+      "(13436, 28)\n",
+      "(13952, 28)\n",
+      "(13502, 28)\n",
+      "(11019, 28)\n",
+      "(15684, 28)\n",
+      "(13210, 28)\n"
+     ]
+    }
+   ],
    "source": [
     "for j in range(106, 108):\n",
     "    # 取得 a-x檔案內的資料\n",
     "    for i in range(1, 5):\n",
     "        try:\n",
-    "            temp = pd.read_csv('./106to108/' + str(j) + '_S' + str(i) + '_F_lvr_land_A.csv', header=None, names=col_name)\n",
+    "            temp = pd.read_csv('./106to108/' + str(j) + '_S' + str(i) + '_F_lvr_land_A.csv')\n",
+    "            print(temp.shape)\n",
     "            temp = temp.drop(temp.index[0])\n",
     "            landDF = landDF.append(temp, ignore_index=True)\n",
     "        except Exception as e:\n",
@@ -218,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(104104, 28)\n"
+      "(104096, 30)\n"
      ]
     }
    ],
@@ -235,12 +251,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>主要建材</th>\n",
+       "      <th>主要用途</th>\n",
+       "      <th>交易年月日</th>\n",
+       "      <th>交易標的</th>\n",
+       "      <th>交易筆棟數</th>\n",
+       "      <th>備註</th>\n",
+       "      <th>單價元/平方公尺</th>\n",
+       "      <th>單價元平方公尺</th>\n",
+       "      <th>土地區段位置/建物區段門牌</th>\n",
+       "      <th>土地區段位置建物區段門牌</th>\n",
+       "      <th>...</th>\n",
+       "      <th>編號</th>\n",
+       "      <th>總價元</th>\n",
+       "      <th>總樓層數</th>\n",
+       "      <th>車位移轉總面積平方公尺</th>\n",
+       "      <th>車位總價元</th>\n",
+       "      <th>車位類別</th>\n",
+       "      <th>都市土地使用分區</th>\n",
+       "      <th>鄉鎮市區</th>\n",
+       "      <th>非都市土地使用分區</th>\n",
+       "      <th>非都市土地使用編定</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1040908</td>\n",
+       "      <td>鋼筋混凝土造</td>\n",
+       "      <td>土地1建物1車位1</td>\n",
+       "      <td>新北市土城區中央路四段241~270號</td>\n",
+       "      <td>十一層</td>\n",
+       "      <td>RPTPMLLJJILFFAF67CA</td>\n",
+       "      <td>坡道平面</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>89564</td>\n",
+       "      <td>住宅大樓(11層含以上有電梯)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>房地(土地+建物)+車位</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1051002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0870626</td>\n",
+       "      <td>鋼筋混凝土造</td>\n",
+       "      <td>土地1建物1車位0</td>\n",
+       "      <td>新北市土城區立雲街1~30號</td>\n",
+       "      <td>十層</td>\n",
+       "      <td>RPPQMLLJJILFFAF37CA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>105867</td>\n",
+       "      <td>住宅大樓(11層含以上有電梯)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>房地(土地+建物)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1050930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0871106</td>\n",
+       "      <td>鋼筋混凝土造</td>\n",
+       "      <td>土地1建物1車位0</td>\n",
+       "      <td>新北市板橋區金門街372巷1~30號</td>\n",
+       "      <td>五層</td>\n",
+       "      <td>RPPPMLMJJILFFAF37CA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>99291</td>\n",
+       "      <td>華廈(10層含以下有電梯)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>含增建或未登記建物。;陽台外推。</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>房地(土地+建物)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1050924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>加強磚造</td>\n",
+       "      <td>土地1建物1車位0</td>\n",
+       "      <td>新北市板橋區文化路二段225巷60弄61~90號</td>\n",
+       "      <td>全</td>\n",
+       "      <td>RPQNMLNJJILFFAF37CA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>257732</td>\n",
+       "      <td>透天厝</td>\n",
+       "      <td>0</td>\n",
+       "      <td>含增建或未登記建物。;權利人共兩人含增建或未登記建物。</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>房地(土地+建物)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1050916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0950914</td>\n",
+       "      <td>鋼骨鋼筋混凝土造</td>\n",
+       "      <td>土地1建物1車位0</td>\n",
+       "      <td>新北市板橋區民生路三段301~330號</td>\n",
+       "      <td>十八層</td>\n",
+       "      <td>RPRPMLNJJILFFAF67CA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>137730</td>\n",
+       "      <td>住宅大樓(11層含以上有電梯)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>含增建或未登記建物。;內含獨立產權公設，未包含在棟數內。含增建或未登記建物。</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>房地(土地+建物)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1050815</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      主要建材      主要用途      交易年月日                      交易標的 交易筆棟數  \\\n",
+       "0  1040908    鋼筋混凝土造  土地1建物1車位1       新北市土城區中央路四段241~270號   十一層   \n",
+       "1  0870626    鋼筋混凝土造  土地1建物1車位0            新北市土城區立雲街1~30號    十層   \n",
+       "2  0871106    鋼筋混凝土造  土地1建物1車位0        新北市板橋區金門街372巷1~30號    五層   \n",
+       "3      NaN      加強磚造  土地1建物1車位0  新北市板橋區文化路二段225巷60弄61~90號     全   \n",
+       "4  0950914  鋼骨鋼筋混凝土造  土地1建物1車位0       新北市板橋區民生路三段301~330號   十八層   \n",
+       "\n",
+       "                    備註 單價元/平方公尺 單價元平方公尺 土地區段位置/建物區段門牌 土地區段位置建物區段門牌  ...   編號  \\\n",
+       "0  RPTPMLLJJILFFAF67CA     坡道平面     NaN         29.75          NaN  ...  NaN   \n",
+       "1  RPPQMLLJJILFFAF37CA      NaN     NaN          9.99          NaN  ...  NaN   \n",
+       "2  RPPPMLMJJILFFAF37CA      NaN     NaN         13.14          NaN  ...  NaN   \n",
+       "3  RPQNMLNJJILFFAF37CA      NaN     NaN          75.0          NaN  ...  NaN   \n",
+       "4  RPRPMLNJJILFFAF67CA      NaN     NaN          2.53          NaN  ...  NaN   \n",
+       "\n",
+       "      總價元             總樓層數 車位移轉總面積平方公尺  \\\n",
+       "0   89564  住宅大樓(11層含以上有電梯)           0   \n",
+       "1  105867  住宅大樓(11層含以上有電梯)           0   \n",
+       "2   99291    華廈(10層含以下有電梯)           0   \n",
+       "3  257732              透天厝           0   \n",
+       "4  137730  住宅大樓(11層含以上有電梯)           0   \n",
+       "\n",
+       "                                    車位總價元   車位類別 都市土地使用分區          鄉鎮市區  \\\n",
+       "0                                     NaN  35.27      NaN  房地(土地+建物)+車位   \n",
+       "1                                     NaN    0.0      NaN     房地(土地+建物)   \n",
+       "2                        含增建或未登記建物。;陽台外推。    0.0      NaN     房地(土地+建物)   \n",
+       "3             含增建或未登記建物。;權利人共兩人含增建或未登記建物。    0.0      NaN     房地(土地+建物)   \n",
+       "4  含增建或未登記建物。;內含獨立產權公設，未包含在棟數內。含增建或未登記建物。    0.0      NaN     房地(土地+建物)   \n",
+       "\n",
+       "  非都市土地使用分區 非都市土地使用編定  \n",
+       "0       NaN   1051002  \n",
+       "1       NaN   1050930  \n",
+       "2       NaN   1050924  \n",
+       "3       NaN   1050916  \n",
+       "4       NaN   1050815  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "landDF.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 整合結果後輸出成新csv\n",
-    "landDF.to_csv('all_F_lvr_land_A.csv', index=False)"
+    "landDF.to_csv('all_F_lvr_land_A.csv', index=False, encoding='utf_8_sig')"
    ]
   },
   {
