Add 0703 test model on 108 data set

--- a/0703/combine_csv.ipynb
+++ b/0703/combine_csv.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 整合所以geo csv並套用回 all_F"
+    "### 整合所有geo csv並套用回 all_F"
    ]
   },
   {
