Update 0703 test model on 108 data set

--- a/0703/combine_csv.ipynb
+++ b/0703/combine_csv.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "geo_8000 = pd.read_csv('geo_info_8000.csv', index_col=False)\n",
-    "geo2 = pd.read_csv('geo_info_8000_to_12000.csv', index_col=False)\n",
-    "geo3 = pd.read_csv('geo_info_12000_to_16057.csv', index_col=False)"
+    "geo_8000 = pd.read_csv('../0702/geo_info_8000.csv', index_col=False)\n",
+    "geo2 = pd.read_csv('../0702/geo_info_8000_to_12000.csv', index_col=False)\n",
+    "geo3 = pd.read_csv('../0702/geo_info_12000_to_16057.csv', index_col=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "(12862, 3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,21 +55,21 @@
     }
    ],
    "source": [
-    "all = pd.read_csv('all_F_lvr_land_A.csv', index_col=False)"
+    "all = pd.read_csv('../0702/all_F_lvr_land_A.csv', index_col=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all = all.merge(geo_8000[['address','lat', 'lng']], left_on='土地區段位置/建物區段門牌', right_on='address', how='left').drop('address',axis=1)"
+    "all = all.merge(geo_all[['address','lat', 'lng']], left_on='土地區段位置/建物區段門牌', right_on='address', how='left').drop('address',axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +99,25 @@
    ],
    "source": [
     "all.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_test = pd.read_csv('./test_data/all_test.csv', index_col=False)\n",
+    "all_test = all_test.merge(geo_all[['address','lat', 'lng']], left_on='土地區段位置/建物區段門牌', right_on='address', how='left').drop('address',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_test.to_csv('./test_data/all_test_lat.csv', index=False, encoding='utf_8_sig')"
    ]
   },
   {
