--- a/0703/combine_csv.ipynb
+++ b/0703/combine_csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "(12862, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,6 +38,15 @@
    "source": [
     "geo_all = pd.concat([geo_8000, geo2, geo3])\n",
     "geo_all.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo_all.to_csv('all_geo.csv', index=False, encoding='utf_8_sig')"
    ]
   },
   {
