--- a/0704/Floor.ipynb
+++ b/0704/Floor.ipynb
@@ -272,218 +272,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>鄉鎮市區</th>\n",
-       "      <th>交易標的</th>\n",
-       "      <th>土地區段位置/建物區段門牌</th>\n",
-       "      <th>土地移轉總面積平方公尺</th>\n",
-       "      <th>都市土地使用分區</th>\n",
-       "      <th>非都市土地使用分區</th>\n",
-       "      <th>非都市土地使用編定</th>\n",
-       "      <th>交易年月日</th>\n",
-       "      <th>交易筆棟數</th>\n",
-       "      <th>移轉層次</th>\n",
-       "      <th>...</th>\n",
-       "      <th>車位類別</th>\n",
-       "      <th>車位移轉總面積平方公尺</th>\n",
-       "      <th>車位總價元</th>\n",
-       "      <th>備註</th>\n",
-       "      <th>編號</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lng</th>\n",
-       "      <th>移轉層次(正數)</th>\n",
-       "      <th>移轉層次(非正數)</th>\n",
-       "      <th>移轉層次(非純數)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>板橋區</td>\n",
-       "      <td>房地(土地+建物)</td>\n",
-       "      <td>新北市板橋區華東街271~300號</td>\n",
-       "      <td>8.80</td>\n",
-       "      <td>住</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1060621</td>\n",
-       "      <td>土地2建物1車位0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>本案尚未成立管理委員會.</td>\n",
-       "      <td>RPUOMLMJQHMFFAF48CA</td>\n",
-       "      <td>25.001936</td>\n",
-       "      <td>121.452653</td>\n",
-       "      <td>0.791667</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>板橋區</td>\n",
-       "      <td>房地(土地+建物)+車位</td>\n",
-       "      <td>新北市板橋區華東街271~300號</td>\n",
-       "      <td>18.48</td>\n",
-       "      <td>住</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1060725</td>\n",
-       "      <td>土地2建物1車位1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>坡道平面</td>\n",
-       "      <td>26.73</td>\n",
-       "      <td>2600000</td>\n",
-       "      <td>本案尚未成立管理委員會.</td>\n",
-       "      <td>RPXOMLMJQHMFFAF78CA</td>\n",
-       "      <td>25.001936</td>\n",
-       "      <td>121.452653</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>土城區</td>\n",
-       "      <td>房地(土地+建物)</td>\n",
-       "      <td>新北市土城區永豐路121~150號</td>\n",
-       "      <td>17.71</td>\n",
-       "      <td>住</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1060617</td>\n",
-       "      <td>土地6建物1車位0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RPORMLMJQHMFFAF18CA</td>\n",
-       "      <td>24.984078</td>\n",
-       "      <td>121.466060</td>\n",
-       "      <td>0.642857</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>板橋區</td>\n",
-       "      <td>房地(土地+建物)+車位</td>\n",
-       "      <td>新北市板橋區新崑路91~120號</td>\n",
-       "      <td>26.23</td>\n",
-       "      <td>住</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1060630</td>\n",
-       "      <td>土地1建物1車位1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>坡道平面</td>\n",
-       "      <td>24.71</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RPQNMLNJQHMFFAF08CA</td>\n",
-       "      <td>24.999177</td>\n",
-       "      <td>121.432317</td>\n",
-       "      <td>0.615385</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>土城區</td>\n",
-       "      <td>房地(土地+建物)</td>\n",
-       "      <td>新北市土城區延和路76巷1~30號</td>\n",
-       "      <td>22.47</td>\n",
-       "      <td>住</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1060620</td>\n",
-       "      <td>土地1建物1車位0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RPSOMLNJQHMFFAF38CA</td>\n",
-       "      <td>24.989084</td>\n",
-       "      <td>121.466463</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  鄉鎮市區          交易標的      土地區段位置/建物區段門牌  土地移轉總面積平方公尺 都市土地使用分區 非都市土地使用分區  \\\n",
-       "0  板橋區     房地(土地+建物)  新北市板橋區華東街271~300號         8.80        住       NaN   \n",
-       "1  板橋區  房地(土地+建物)+車位  新北市板橋區華東街271~300號        18.48        住       NaN   \n",
-       "2  土城區     房地(土地+建物)  新北市土城區永豐路121~150號        17.71        住       NaN   \n",
-       "3  板橋區  房地(土地+建物)+車位   新北市板橋區新崑路91~120號        26.23        住       NaN   \n",
-       "4  土城區     房地(土地+建物)  新北市土城區延和路76巷1~30號        22.47        住       NaN   \n",
-       "\n",
-       "  非都市土地使用編定    交易年月日      交易筆棟數 移轉層次  ...  車位類別 車位移轉總面積平方公尺    車位總價元  \\\n",
-       "0       NaN  1060621  土地2建物1車位0   19  ...   NaN        0.00        0   \n",
-       "1       NaN  1060725  土地2建物1車位1   18  ...  坡道平面       26.73  2600000   \n",
-       "2       NaN  1060617  土地6建物1車位0    9  ...   NaN        0.00        0   \n",
-       "3       NaN  1060630  土地1建物1車位1    8  ...  坡道平面       24.71        0   \n",
-       "4       NaN  1060620  土地1建物1車位0    1  ...   NaN        0.00        0   \n",
-       "\n",
-       "             備註                   編號        lat         lng  移轉層次(正數)  \\\n",
-       "0  本案尚未成立管理委員會.  RPUOMLMJQHMFFAF48CA  25.001936  121.452653  0.791667   \n",
-       "1  本案尚未成立管理委員會.  RPXOMLMJQHMFFAF78CA  25.001936  121.452653  0.750000   \n",
-       "2           NaN  RPORMLMJQHMFFAF18CA  24.984078  121.466060  0.642857   \n",
-       "3           NaN  RPQNMLNJQHMFFAF08CA  24.999177  121.432317  0.615385   \n",
-       "4           NaN  RPSOMLNJQHMFFAF38CA  24.989084  121.466463  0.200000   \n",
-       "\n",
-       "   移轉層次(非正數) 移轉層次(非純數)  \n",
-       "0        0.0            \n",
-       "1        0.0            \n",
-       "2        0.0            \n",
-       "3        0.0            \n",
-       "4        0.0            \n",
-       "\n",
-       "[5 rows x 33 columns]"
+       "Index(['鄉鎮市區', '交易標的', '土地區段位置/建物區段門牌', '土地移轉總面積平方公尺', '都市土地使用分區', '非都市土地使用分區',\n",
+       "       '非都市土地使用編定', '交易年月日', '交易筆棟數', '移轉層次', '總樓層數', '建物型態', '主要用途', '主要建材',\n",
+       "       '建築完成年月', '建物移轉總面積平方公尺', '建物現況格局-房', '建物現況格局-廳', '建物現況格局-衛',\n",
+       "       '建物現況格局-隔間', '有無管理組織', '總價元', '單價元/平方公尺', '車位類別', '車位移轉總面積平方公尺',\n",
+       "       '車位總價元', '備註', '編號', 'lat', 'lng', '移轉層次(正數)', '移轉層次(非正數)',\n",
+       "       '移轉層次(非純數)'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DataFrame.head()"
+    "DataFrame.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    24\n",
+       "1    24\n",
+       "2    14\n",
+       "3    13\n",
+       "4     5\n",
+       "Name: 總樓層數, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DataFrame['總樓層數'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    24\n",
+       "1    24\n",
+       "2    14\n",
+       "3    13\n",
+       "4     5\n",
+       "Name: 總樓層數, dtype: int32"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DataFrame['總樓層數'].astype(int).head()"
    ]
   },
   {
@@ -504,11 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataFrame[['移轉層次(正數)', '移轉層次(非正數)', '移轉層次(非純數)']] .to_csv('floor_feature.csv', index=False, encoding='utf_8_sig')"
+    "DataFrame[['移轉層次(正數)', '移轉層次(非正數)', '移轉層次(非純數)','總樓層數']] .to_csv('floor_feature.csv', index=False, encoding='utf_8_sig')"
    ]
   },
   {
