--- a/0705/practice.ipynb
+++ b/0705/practice.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,12 +312,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "底下這個cell是自動建立字典"
+    "**底下這個cell是自動建立字典**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -387,22 +387,20 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_4 (Embedding)      (None, 30, 64)            154944    \n",
+      "embedding_5 (Embedding)      (None, 30, 60)            128220    \n",
       "_________________________________________________________________\n",
-      "cu_dnnlstm_19 (CuDNNLSTM)    (None, 30, 64)            33280     \n",
+      "cu_dnnlstm_11 (CuDNNLSTM)    (None, 30, 30)            11040     \n",
       "_________________________________________________________________\n",
-      "cu_dnnlstm_20 (CuDNNLSTM)    (None, 40)                16960     \n",
+      "cu_dnnlstm_12 (CuDNNLSTM)    (None, 20)                4160      \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 40)                0         \n",
+      "dropout_5 (Dropout)          (None, 20)                0         \n",
       "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 40)                1640      \n",
+      "dense_12 (Dense)             (None, 10)                210       \n",
       "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 20)                820       \n",
-      "_________________________________________________________________\n",
-      "dense_12 (Dense)             (None, 2)                 42        \n",
+      "dense_13 (Dense)             (None, 2)                 22        \n",
       "=================================================================\n",
-      "Total params: 207,686\n",
-      "Trainable params: 207,686\n",
+      "Total params: 143,652\n",
+      "Trainable params: 143,652\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -417,19 +415,19 @@
     "model_LSTM = Sequential()\n",
     "\n",
     "# Embedding\n",
-    "# model_LSTM.add(Embedding(output_dim=64, input_dim=len(token.word_index), input_length=max_len))\n",
-    "model_LSTM.add(Embedding(output_dim=64, input_dim=len(sentence_dict), input_length=max_len))\n",
-    "model_LSTM.add(CuDNNLSTM(64, input_shape=(max_len, 1), return_sequences=True))\n",
+    "model_LSTM.add(Embedding(output_dim=60, input_dim=len(token.word_index), input_length=max_len))\n",
+    "# model_LSTM.add(Embedding(output_dim=44, input_dim=len(sentence_dict), input_length=max_len))\n",
+    "model_LSTM.add(CuDNNLSTM(30, input_shape=(max_len, 1), return_sequences=True))\n",
     "# model_LSTM.add(CuDNNLSTM(50, return_sequences=True))\n",
     "# model_LSTM.add(CuDNNLSTM(40, return_sequences=True))\n",
     "# model_LSTM.add(CuDNNLSTM(30, return_sequences=True))\n",
     "# model_LSTM.add(CuDNNLSTM(20, return_sequences=True))\n",
-    "model_LSTM.add(CuDNNLSTM(40, return_sequences=False))\n",
+    "model_LSTM.add(CuDNNLSTM(20, return_sequences=False))\n",
     "\n",
     "model_LSTM.add(Dropout(0.25))\n",
     "\n",
-    "model_LSTM.add(Dense(40, activation='relu'))\n",
-    "model_LSTM.add(Dense(20, activation='relu'))\n",
+    "# model_LSTM.add(Dense(20, activation='relu'))\n",
+    "model_LSTM.add(Dense(10, activation='relu'))\n",
     "model_LSTM.add(Dense(2, activation='softmax'))\n",
     "\n",
     "model_LSTM.summary()\n",
@@ -439,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -447,81 +445,41 @@
      "output_type": "stream",
      "text": [
       "Train on 988 samples, validate on 247 samples\n",
-      "Epoch 1/30\n",
-      " - 1s - loss: 0.6918 - acc: 0.5162 - val_loss: 0.8290 - val_acc: 0.0000e+00\n",
-      "Epoch 2/30\n",
-      " - 0s - loss: 0.6895 - acc: 0.5374 - val_loss: 0.7434 - val_acc: 0.0000e+00\n",
-      "Epoch 3/30\n",
-      " - 0s - loss: 0.6277 - acc: 0.6528 - val_loss: 0.6884 - val_acc: 0.5911\n",
-      "Epoch 4/30\n",
-      " - 0s - loss: 0.3193 - acc: 0.8725 - val_loss: 1.3558 - val_acc: 0.3603\n",
-      "Epoch 5/30\n",
-      " - 0s - loss: 0.1496 - acc: 0.9504 - val_loss: 1.2833 - val_acc: 0.5020\n",
-      "Epoch 6/30\n",
-      " - 0s - loss: 0.0928 - acc: 0.9686 - val_loss: 1.5695 - val_acc: 0.5101\n",
-      "Epoch 7/30\n",
-      " - 0s - loss: 0.0745 - acc: 0.9777 - val_loss: 2.1263 - val_acc: 0.4291\n",
-      "Epoch 8/30\n",
-      " - 0s - loss: 0.0526 - acc: 0.9808 - val_loss: 1.5801 - val_acc: 0.5911\n",
-      "Epoch 9/30\n",
-      " - 0s - loss: 0.0350 - acc: 0.9899 - val_loss: 2.0657 - val_acc: 0.5506\n",
-      "Epoch 10/30\n",
-      " - 0s - loss: 0.0262 - acc: 0.9929 - val_loss: 3.0906 - val_acc: 0.4291\n",
-      "Epoch 11/30\n",
-      " - 0s - loss: 0.0125 - acc: 0.9970 - val_loss: 3.7829 - val_acc: 0.4130\n",
-      "Epoch 12/30\n",
-      " - 0s - loss: 0.0102 - acc: 0.9960 - val_loss: 4.2348 - val_acc: 0.3360\n",
-      "Epoch 13/30\n",
-      " - 0s - loss: 0.0165 - acc: 0.9970 - val_loss: 4.1057 - val_acc: 0.3563\n",
-      "Epoch 14/30\n",
-      " - 0s - loss: 0.0083 - acc: 0.9990 - val_loss: 4.2569 - val_acc: 0.4211\n",
-      "Epoch 15/30\n",
-      " - 0s - loss: 0.0064 - acc: 0.9990 - val_loss: 4.2691 - val_acc: 0.4251\n",
-      "Epoch 16/30\n",
-      " - 0s - loss: 0.0064 - acc: 0.9990 - val_loss: 4.2228 - val_acc: 0.4372\n",
-      "Epoch 17/30\n",
-      " - 0s - loss: 0.0068 - acc: 0.9990 - val_loss: 4.4511 - val_acc: 0.4413\n",
-      "Epoch 18/30\n",
-      " - 0s - loss: 0.0048 - acc: 0.9990 - val_loss: 4.5654 - val_acc: 0.4534\n",
-      "Epoch 19/30\n",
-      " - 0s - loss: 0.0054 - acc: 0.9990 - val_loss: 4.3411 - val_acc: 0.4818\n",
-      "Epoch 20/30\n",
-      " - 0s - loss: 0.0061 - acc: 0.9990 - val_loss: 4.5075 - val_acc: 0.4696\n",
-      "Epoch 21/30\n",
-      " - 0s - loss: 0.0054 - acc: 0.9990 - val_loss: 4.6762 - val_acc: 0.4696\n",
-      "Epoch 22/30\n",
-      " - 0s - loss: 0.0064 - acc: 0.9990 - val_loss: 4.5080 - val_acc: 0.4696\n",
-      "Epoch 23/30\n",
-      " - 0s - loss: 0.0058 - acc: 0.9990 - val_loss: 4.8260 - val_acc: 0.4696\n",
-      "Epoch 24/30\n",
-      " - 0s - loss: 0.0055 - acc: 0.9990 - val_loss: 4.7079 - val_acc: 0.4939\n",
-      "Epoch 25/30\n",
-      " - 0s - loss: 0.0062 - acc: 0.9990 - val_loss: 4.6013 - val_acc: 0.5061\n",
-      "Epoch 26/30\n",
-      " - 0s - loss: 0.0039 - acc: 0.9990 - val_loss: 5.0273 - val_acc: 0.4899\n",
-      "Epoch 27/30\n",
-      " - 0s - loss: 0.0046 - acc: 0.9990 - val_loss: 5.1813 - val_acc: 0.4777\n",
-      "Epoch 28/30\n",
-      " - 0s - loss: 0.0059 - acc: 0.9990 - val_loss: 5.7568 - val_acc: 0.4332\n",
-      "Epoch 29/30\n",
-      " - 0s - loss: 0.0060 - acc: 0.9990 - val_loss: 5.4454 - val_acc: 0.4413\n",
-      "Epoch 30/30\n",
-      " - 0s - loss: 0.0060 - acc: 0.9990 - val_loss: 5.0391 - val_acc: 0.5101\n"
+      "Epoch 1/10\n",
+      " - 0s - loss: 0.0348 - acc: 0.9909 - val_loss: 2.8312 - val_acc: 0.4494\n",
+      "Epoch 2/10\n",
+      " - 0s - loss: 0.0224 - acc: 0.9909 - val_loss: 3.2816 - val_acc: 0.4089\n",
+      "Epoch 3/10\n",
+      " - 0s - loss: 0.0139 - acc: 0.9970 - val_loss: 3.2513 - val_acc: 0.4656\n",
+      "Epoch 4/10\n",
+      " - 0s - loss: 0.0176 - acc: 0.9949 - val_loss: 3.5921 - val_acc: 0.3887\n",
+      "Epoch 5/10\n",
+      " - 0s - loss: 0.0143 - acc: 0.9980 - val_loss: 3.5359 - val_acc: 0.4534\n",
+      "Epoch 6/10\n",
+      " - 0s - loss: 0.0099 - acc: 0.9980 - val_loss: 4.6722 - val_acc: 0.3765\n",
+      "Epoch 7/10\n",
+      " - 0s - loss: 0.0080 - acc: 0.9990 - val_loss: 4.0532 - val_acc: 0.4251\n",
+      "Epoch 8/10\n",
+      " - 0s - loss: 0.0066 - acc: 0.9990 - val_loss: 4.1387 - val_acc: 0.4696\n",
+      "Epoch 9/10\n",
+      " - 0s - loss: 0.0084 - acc: 0.9990 - val_loss: 4.2849 - val_acc: 0.4211\n",
+      "Epoch 10/10\n",
+      " - 0s - loss: 0.0079 - acc: 0.9990 - val_loss: 4.1100 - val_acc: 0.4615\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x21da38aa438>"
+       "<keras.callbacks.History at 0x232e3934160>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_LSTM.fit(x_train_seq, y_train,batch_size=20, epochs=10,verbose=2, validation_split=0.2)"
+    "model_LSTM.fit(x_train_seq, y_train,batch_size=20, epochs=10,verbose=2, validation_split=0.2, shuffle=True)"
    ]
   },
   {
