--- a/0708/Preview/demo.ipynb
+++ b/0708/Preview/demo.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 參數設定\n",
     "batch_size = 64  # Batch size for training.\n",
-    "epochs = 50  # Number of epochs to train for.\n",
+    "epochs = 30  # Number of epochs to train for.\n",
     "latent_dim = 256  # Latent dimensionality of the encoding space.\n",
     "num_samples = 10000  # Number of samples to train on.\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,245 +119,105 @@
      "output_type": "stream",
      "text": [
       "Train on 8000 samples, validate on 2000 samples\n",
-      "Epoch 1/100\n",
-      " - 11s - loss: 1.9806 - val_loss: 2.4353\n",
-      "Epoch 2/100\n",
-      " - 9s - loss: 1.8474 - val_loss: 2.3592\n",
-      "Epoch 3/100\n",
-      " - 9s - loss: 1.7391 - val_loss: 2.2309\n",
-      "Epoch 4/100\n",
-      " - 9s - loss: 1.6432 - val_loss: 2.1751\n",
-      "Epoch 5/100\n",
-      " - 9s - loss: 1.5628 - val_loss: 2.0976\n",
-      "Epoch 6/100\n",
-      " - 9s - loss: 1.4875 - val_loss: 2.0081\n",
-      "Epoch 7/100\n",
-      " - 9s - loss: 1.4170 - val_loss: 1.9474\n",
-      "Epoch 8/100\n",
-      " - 9s - loss: 1.3564 - val_loss: 1.9216\n",
-      "Epoch 9/100\n",
-      " - 9s - loss: 1.3053 - val_loss: 1.8536\n",
-      "Epoch 10/100\n",
-      " - 9s - loss: 1.2574 - val_loss: 1.8277\n",
-      "Epoch 11/100\n",
-      " - 9s - loss: 1.2141 - val_loss: 1.7932\n",
-      "Epoch 12/100\n",
-      " - 9s - loss: 1.1757 - val_loss: 1.7854\n",
-      "Epoch 13/100\n",
-      " - 9s - loss: 1.1396 - val_loss: 1.7559\n",
-      "Epoch 14/100\n",
-      " - 9s - loss: 1.1060 - val_loss: 1.7394\n",
-      "Epoch 15/100\n",
-      " - 9s - loss: 1.0759 - val_loss: 1.7266\n",
-      "Epoch 16/100\n",
-      " - 9s - loss: 1.0445 - val_loss: 1.7151\n",
-      "Epoch 17/100\n",
-      " - 9s - loss: 1.0169 - val_loss: 1.7102\n",
-      "Epoch 18/100\n",
-      " - 9s - loss: 0.9877 - val_loss: 1.7032\n",
-      "Epoch 19/100\n",
-      " - 9s - loss: 0.9624 - val_loss: 1.6956\n",
-      "Epoch 20/100\n",
-      " - 9s - loss: 0.9367 - val_loss: 1.6940\n",
-      "Epoch 21/100\n",
-      " - 9s - loss: 0.9122 - val_loss: 1.6865\n",
-      "Epoch 22/100\n",
-      " - 9s - loss: 0.8872 - val_loss: 1.6840\n",
-      "Epoch 23/100\n",
-      " - 9s - loss: 0.8650 - val_loss: 1.6805\n",
-      "Epoch 24/100\n",
-      " - 9s - loss: 0.8415 - val_loss: 1.6898\n",
-      "Epoch 25/100\n",
-      " - 9s - loss: 0.8191 - val_loss: 1.6907\n",
-      "Epoch 26/100\n",
-      " - 9s - loss: 0.7976 - val_loss: 1.6894\n",
-      "Epoch 27/100\n",
-      " - 9s - loss: 0.7768 - val_loss: 1.6882\n",
-      "Epoch 28/100\n",
-      " - 9s - loss: 0.7566 - val_loss: 1.6907\n",
-      "Epoch 29/100\n",
-      " - 9s - loss: 0.7371 - val_loss: 1.6914\n",
-      "Epoch 30/100\n",
-      " - 9s - loss: 0.7178 - val_loss: 1.6849\n",
-      "Epoch 31/100\n",
-      " - 9s - loss: 0.6987 - val_loss: 1.7074\n",
-      "Epoch 32/100\n",
-      " - 10s - loss: 0.6806 - val_loss: 1.7006\n",
-      "Epoch 33/100\n",
-      " - 10s - loss: 0.6633 - val_loss: 1.7067\n",
-      "Epoch 34/100\n",
-      " - 10s - loss: 0.6452 - val_loss: 1.7044\n",
-      "Epoch 35/100\n",
-      " - 10s - loss: 0.6284 - val_loss: 1.7156\n",
-      "Epoch 36/100\n",
-      " - 10s - loss: 0.6116 - val_loss: 1.7211\n",
-      "Epoch 37/100\n",
-      " - 10s - loss: 0.5959 - val_loss: 1.7309\n",
-      "Epoch 38/100\n",
-      " - 10s - loss: 0.5795 - val_loss: 1.7391\n",
-      "Epoch 39/100\n",
-      " - 10s - loss: 0.5642 - val_loss: 1.7410\n",
-      "Epoch 40/100\n",
-      " - 10s - loss: 0.5495 - val_loss: 1.7491\n",
-      "Epoch 41/100\n",
-      " - 10s - loss: 0.5347 - val_loss: 1.7548\n",
-      "Epoch 42/100\n",
-      " - 9s - loss: 0.5207 - val_loss: 1.7628\n",
-      "Epoch 43/100\n",
-      " - 9s - loss: 0.5064 - val_loss: 1.7723\n",
-      "Epoch 44/100\n",
-      " - 9s - loss: 0.4928 - val_loss: 1.7805\n",
-      "Epoch 45/100\n",
-      " - 9s - loss: 0.4797 - val_loss: 1.7891\n",
-      "Epoch 46/100\n",
-      " - 9s - loss: 0.4674 - val_loss: 1.7908\n",
-      "Epoch 47/100\n",
-      " - 9s - loss: 0.4546 - val_loss: 1.7946\n",
-      "Epoch 48/100\n",
-      " - 9s - loss: 0.4425 - val_loss: 1.8110\n",
-      "Epoch 49/100\n",
-      " - 9s - loss: 0.4307 - val_loss: 1.8123\n",
-      "Epoch 50/100\n",
-      " - 9s - loss: 0.4191 - val_loss: 1.8208\n",
-      "Epoch 51/100\n",
-      " - 9s - loss: 0.4072 - val_loss: 1.8246\n",
-      "Epoch 52/100\n",
-      " - 9s - loss: 0.3958 - val_loss: 1.8429\n",
-      "Epoch 53/100\n",
-      " - 9s - loss: 0.3852 - val_loss: 1.8432\n",
-      "Epoch 54/100\n",
-      " - 9s - loss: 0.3748 - val_loss: 1.8515\n",
-      "Epoch 55/100\n",
-      " - 9s - loss: 0.3655 - val_loss: 1.8575\n",
-      "Epoch 56/100\n",
-      " - 9s - loss: 0.3560 - val_loss: 1.8646\n",
-      "Epoch 57/100\n",
-      " - 9s - loss: 0.3459 - val_loss: 1.8750\n",
-      "Epoch 58/100\n",
-      " - 9s - loss: 0.3361 - val_loss: 1.8794\n",
-      "Epoch 59/100\n",
-      " - 9s - loss: 0.3266 - val_loss: 1.8904\n",
-      "Epoch 60/100\n",
-      " - 9s - loss: 0.3181 - val_loss: 1.8915\n",
-      "Epoch 61/100\n",
-      " - 9s - loss: 0.3085 - val_loss: 1.9070\n",
-      "Epoch 62/100\n",
-      " - 10s - loss: 0.3004 - val_loss: 1.9127\n",
-      "Epoch 63/100\n",
-      " - 10s - loss: 0.2919 - val_loss: 1.9120\n",
-      "Epoch 64/100\n",
-      " - 10s - loss: 0.2837 - val_loss: 1.9209\n",
-      "Epoch 65/100\n",
-      " - 9s - loss: 0.2761 - val_loss: 1.9360\n",
-      "Epoch 66/100\n",
-      " - 9s - loss: 0.2681 - val_loss: 1.9500\n",
-      "Epoch 67/100\n",
-      " - 9s - loss: 0.2605 - val_loss: 1.9511\n",
-      "Epoch 68/100\n",
-      " - 9s - loss: 0.2528 - val_loss: 1.9628\n",
-      "Epoch 69/100\n",
-      " - 9s - loss: 0.2462 - val_loss: 1.9639\n",
-      "Epoch 70/100\n",
-      " - 9s - loss: 0.2393 - val_loss: 1.9758\n",
-      "Epoch 71/100\n",
-      " - 9s - loss: 0.2322 - val_loss: 1.9888\n",
-      "Epoch 72/100\n",
-      " - 9s - loss: 0.2251 - val_loss: 1.9992\n",
-      "Epoch 73/100\n",
-      " - 9s - loss: 0.2197 - val_loss: 1.9995\n",
-      "Epoch 74/100\n",
-      " - 9s - loss: 0.2130 - val_loss: 2.0035\n",
-      "Epoch 75/100\n",
-      " - 9s - loss: 0.2060 - val_loss: 2.0193\n",
-      "Epoch 76/100\n",
-      " - 9s - loss: 0.1994 - val_loss: 2.0229\n",
-      "Epoch 77/100\n",
-      " - 9s - loss: 0.1942 - val_loss: 2.0441\n",
-      "Epoch 78/100\n",
-      " - 9s - loss: 0.1873 - val_loss: 2.0426\n",
-      "Epoch 79/100\n",
-      " - 9s - loss: 0.1827 - val_loss: 2.0581\n",
-      "Epoch 80/100\n",
-      " - 9s - loss: 0.1775 - val_loss: 2.0610\n",
-      "Epoch 81/100\n",
-      " - 9s - loss: 0.1714 - val_loss: 2.0647\n",
-      "Epoch 82/100\n",
-      " - 9s - loss: 0.1664 - val_loss: 2.0760\n",
-      "Epoch 83/100\n",
-      " - 9s - loss: 0.1606 - val_loss: 2.0895\n",
-      "Epoch 84/100\n",
-      " - 9s - loss: 0.1561 - val_loss: 2.0868\n",
-      "Epoch 85/100\n",
-      " - 9s - loss: 0.1511 - val_loss: 2.1047\n",
-      "Epoch 86/100\n",
-      " - 9s - loss: 0.1461 - val_loss: 2.1066\n",
-      "Epoch 87/100\n",
-      " - 9s - loss: 0.1417 - val_loss: 2.1158\n",
-      "Epoch 88/100\n",
-      " - 9s - loss: 0.1365 - val_loss: 2.1196\n",
-      "Epoch 89/100\n",
-      " - 9s - loss: 0.1326 - val_loss: 2.1261\n",
-      "Epoch 90/100\n",
-      " - 9s - loss: 0.1275 - val_loss: 2.1495\n",
-      "Epoch 91/100\n",
-      " - 9s - loss: 0.1241 - val_loss: 2.1503\n",
-      "Epoch 92/100\n",
-      " - 9s - loss: 0.1200 - val_loss: 2.1491\n",
-      "Epoch 93/100\n",
-      " - 9s - loss: 0.1152 - val_loss: 2.1693\n",
-      "Epoch 94/100\n",
-      " - 9s - loss: 0.1118 - val_loss: 2.1659\n",
-      "Epoch 95/100\n",
-      " - 9s - loss: 0.1082 - val_loss: 2.1838\n",
-      "Epoch 96/100\n",
-      " - 9s - loss: 0.1048 - val_loss: 2.1701\n",
-      "Epoch 97/100\n",
-      " - 9s - loss: 0.1006 - val_loss: 2.2023\n",
-      "Epoch 98/100\n",
-      " - 9s - loss: 0.0975 - val_loss: 2.1949\n",
-      "Epoch 99/100\n",
-      " - 9s - loss: 0.0937 - val_loss: 2.2110\n",
-      "Epoch 100/100\n",
-      " - 9s - loss: 0.0906 - val_loss: 2.2150\n",
+      "Epoch 1/30\n",
+      " - 10s - loss: 1.9833 - val_loss: 2.4927\n",
+      "Epoch 2/30\n",
+      " - 9s - loss: 1.8523 - val_loss: 2.3244\n",
+      "Epoch 3/30\n",
+      " - 9s - loss: 1.7313 - val_loss: 2.2152\n",
+      "Epoch 4/30\n",
+      " - 9s - loss: 1.6323 - val_loss: 2.1514\n",
+      "Epoch 5/30\n",
+      " - 9s - loss: 1.5467 - val_loss: 2.0354\n",
+      "Epoch 6/30\n",
+      " - 9s - loss: 1.4647 - val_loss: 1.9767\n",
+      "Epoch 7/30\n",
+      " - 9s - loss: 1.3984 - val_loss: 1.9177\n",
+      "Epoch 8/30\n",
+      " - 9s - loss: 1.3377 - val_loss: 1.8740\n",
+      "Epoch 9/30\n",
+      " - 9s - loss: 1.2839 - val_loss: 1.8353\n",
+      "Epoch 10/30\n",
+      " - 9s - loss: 1.2424 - val_loss: 1.8126\n",
+      "Epoch 11/30\n",
+      " - 9s - loss: 1.2009 - val_loss: 1.7906\n",
+      "Epoch 12/30\n",
+      " - 9s - loss: 1.1604 - val_loss: 1.7640\n",
+      "Epoch 13/30\n",
+      " - 9s - loss: 1.1256 - val_loss: 1.7509\n",
+      "Epoch 14/30\n",
+      " - 9s - loss: 1.0904 - val_loss: 1.7331\n",
+      "Epoch 15/30\n",
+      " - 9s - loss: 1.0577 - val_loss: 1.7178\n",
+      "Epoch 16/30\n",
+      " - 9s - loss: 1.0282 - val_loss: 1.7064\n",
+      "Epoch 17/30\n",
+      " - 9s - loss: 0.9990 - val_loss: 1.7032\n",
+      "Epoch 18/30\n",
+      " - 9s - loss: 0.9707 - val_loss: 1.6976\n",
+      "Epoch 19/30\n",
+      " - 9s - loss: 0.9444 - val_loss: 1.7014\n",
+      "Epoch 20/30\n",
+      " - 9s - loss: 0.9204 - val_loss: 1.6895\n",
+      "Epoch 21/30\n",
+      " - 9s - loss: 0.8943 - val_loss: 1.6862\n",
+      "Epoch 22/30\n",
+      " - 9s - loss: 0.8715 - val_loss: 1.6828\n",
+      "Epoch 23/30\n",
+      " - 9s - loss: 0.8488 - val_loss: 1.6905\n",
+      "Epoch 24/30\n",
+      " - 9s - loss: 0.8264 - val_loss: 1.6946\n",
+      "Epoch 25/30\n",
+      " - 9s - loss: 0.8051 - val_loss: 1.6830\n",
+      "Epoch 26/30\n",
+      " - 9s - loss: 0.7843 - val_loss: 1.7046\n",
+      "Epoch 27/30\n",
+      " - 9s - loss: 0.7654 - val_loss: 1.6884\n",
+      "Epoch 28/30\n",
+      " - 9s - loss: 0.7456 - val_loss: 1.7079\n",
+      "Epoch 29/30\n",
+      " - 9s - loss: 0.7267 - val_loss: 1.6902\n",
+      "Epoch 30/30\n",
+      " - 9s - loss: 0.7088 - val_loss: 1.7030\n",
       "*\n",
       "Input sentence: Hi.\n",
-      "Decoded sentence: 嗨。\n",
+      "Decoded sentence: 你不好。\n",
       "\n",
       "*\n",
       "Input sentence: Hi.\n",
-      "Decoded sentence: 嗨。\n",
+      "Decoded sentence: 你不好。\n",
       "\n",
       "*\n",
       "Input sentence: Run.\n",
-      "Decoded sentence: 你用跑的。\n",
+      "Decoded sentence: 不要擔心。\n",
       "\n",
       "*\n",
       "Input sentence: Wait!\n",
-      "Decoded sentence: 等等！\n",
+      "Decoded sentence: 我們這個嗎？\n",
       "\n",
       "*\n",
       "Input sentence: Hello!\n",
-      "Decoded sentence: 你好。\n",
+      "Decoded sentence: 你不好。\n",
       "\n",
       "*\n",
       "Input sentence: I try.\n",
-      "Decoded sentence: 讓我來。\n",
+      "Decoded sentence: 我喜歡你。\n",
       "\n",
       "*\n",
       "Input sentence: I won!\n",
-      "Decoded sentence: 我贏了。\n",
+      "Decoded sentence: 我想你。\n",
       "\n",
       "*\n",
       "Input sentence: Oh no!\n",
-      "Decoded sentence: 不會吧。\n",
+      "Decoded sentence: 你不好。\n",
       "\n",
       "*\n",
       "Input sentence: Cheers!\n",
-      "Decoded sentence: 乾杯!\n",
+      "Decoded sentence: 請開！\n",
       "\n",
       "*\n",
       "Input sentence: He ran.\n",
-      "Decoded sentence: 他跑了。\n",
+      "Decoded sentence: 他不會游泳。\n",
       "\n"
      ]
     }
